# demo-rust-climate-tck

./: Cargo.toml  README.md
playback_data/: average_Rainfall_For_Egypt_From_1980_to_1999_Exists.md  average_Rainfall_For_France_From_1980_to_1999_Exists.md  average_Rainfall_For_Great_Britain_And_France_From_1980_to_1999_Does_Not_Exist.md  average_Rainfall_For_Great_Britain_And_France_From_1980_to_1999_Exists.md  average_Rainfall_For_Great_Britain_From_1980_to_1999_Exists.md  average_Rainfall_For_Great_Britain_From_1985_to_1995_Does_Not_Exist.md  average_Rainfall_For_Middle_Earth_From_1980_to_1999_Does_Not_Exist.md
src/: climate_api_client.rs  error.rs  lib.rs  markdown_manager.rs  servirtium_error.rs  servirtium_server.rs
