[package]
name = "worldbank-climate-api-client"
version = "0.1.0"
authors = ["Denis Karpovskiy <geext29@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
servirtium = { git = "https://github.com/servirtium/servirtium-rust" }
quick-xml = { version = "0.25.0", features = ["serialize"] }
reqwest = { version = "0.11.12", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
regex = "1"
lazy_static = "1.4.0"
hyper = "0.14.20"
futures = "0.3.5"
tokio = { version = "1.21.1", features = ["full"] }
